--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Magic Eight Ball</string>
+    <string name="button_ask">Ask</string>
+    <string name="textview">Make everyday decisions easier!</string>
+    <string name="eight_ball_desc">Eight Ball image</string>
 </resources>
